Nombre usuario master page

--- a/Site.Master
+++ b/Site.Master
@@ -72,6 +72,10 @@
                 </div>
             </div>
         </nav>
+        <div style="color: blue;" >
+        <!-- lbl para mostrar el nombre completo de la persona -->
+        <asp:Label ID="lblNombreCompleto" runat="server" Text="" CssClass="navbar-text" /> 
+        </div>
         <div class="container body-content">
             <asp:ContentPlaceHolder ID="MainContent" runat="server">
             </asp:ContentPlaceHolder>
