--- a/Models/PV_ProyectoFinal.tt
+++ b/Models/PV_ProyectoFinal.tt
@@ -118,9 +118,9 @@
 
 	//LoadSqlServerMetadata("MyServer", "MyDatabase", "User", "Password");
 	// Server Dennis
-    //LoadSqlServerMetadata("DENNIS\\SQLEXPRESS", "PVProyectoFinal"); // Integrated Security
+    LoadSqlServerMetadata("DENNIS\\SQLEXPRESS", "PV_ProyectoFinal"); // Integrated Security
 	// Server Stif
-	 LoadSqlServerMetadata("DESKTOP-C7O42T2\\SQLEXPRESS", "PV_ProyectoFinal");
+	// LoadSqlServerMetadata("DESKTOP-C7O42T2\\SQLEXPRESS", "PV_ProyectoFinal");
 //	LoadSqlServerMetadata(string connectionString);
 
 	// to adjust loaded database model before generation, add your code here, after load metadata, but before GenerateModel() call
